Added gulp file / more controls

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
    </head>
    <body>
       <div class="fixed" id="room"></div>
-      <script src="mousetrap.min.js"></script>
+      <script src="mousetrap.js"></script>
       <script src="game.js"></script>
    </body>
 </html>
