--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,11 @@
 <html>
    <head>
       <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+      <title>jarl</title>
    </head>
    <body>
       <div class="fixed" id="room"></div>
+      <div class="fixed" id="text"></div>
       <script src="mousetrap.js"></script>
       <script src="game.js"></script>
    </body>
