--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
    </head>
    <body>
       <div class="fixed" id="room"></div>
-      <div class="fixed" id="text"></div>
+      <div class="fixed trans" id="text"></div>
       <script src="mousetrap.js"></script>
       <script src="game.js"></script>
       <script src="keyboard.js"></script>
