--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
    <body>
       <div class="fixed" id="room"></div>
       <div class="fixed trans" id="text"></div>
+      <div class="fixed trans" id="inventory"></div>
       <script src="mousetrap.js"></script>
       <script src="game.js"></script>
       <script src="keyboard.js"></script>
